[tool.poetry]
name = "homeworkweb7"
version = "0.1.0"
description = ""
authors = ["DSofiya <134394822+DSofiya@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.1"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
